# aws-secret-wrapper

./: .dockerignore  Cargo.toml  Dockerfile  Makefile  README.md  action.yml  entrypoint.sh  example.config.yaml  main.py  test-action.sh
.github/workflows/: release.yml  test.yml
src/: config.rs  main.rs  tests.rs
