[package]
name = "s3-secret-wrapper"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = "1.5.16"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
serde_yaml = "0.9"
aws-sdk-secretsmanager = { version = "1.62.0", features = ["behavior-version-latest"] }
tempfile = "3.16.0"
async-trait = "0.1"


[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
mockall = "0.13.1"