[package]
name = "aws-secret-wrapper"
version = "0.1.3"
edition = "2021"

[dependencies]
aws-config = "1.5.16"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
serde_yaml = "0.9"
aws-sdk-secretsmanager = { version = "1.62.0", features = ["behavior-version-latest"] }
async-trait = "0.1"
tempfile = "3.16.0"
colored = "2"
# Encryption
aes-gcm = "0.10"
rand = "0.8"

# Encoding
base64 = "0.21"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
mockall = "0.13.1"

[[bin]]
name = "aws-secret-wrapper"
path = "src/main.rs"